--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Amazon Clone</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <meta name="google-site-verification" content="7bawUI4edgM4kb0UJq-8dJYz8FEN1CeiFFIhO9mwqdw" />
 </head>
 <body>
     <div class="Navigation-bar">
